Fix spacing of notification headers a little

--- a/tildes/scss/modules/_heading.scss
+++ b/tildes/scss/modules/_heading.scss
@@ -11,6 +11,6 @@
 
 .heading-notification {
   font-size: 0.8rem;
-  line-height: 0.8rem;
-  margin-bottom: 0;
+  line-height: 1rem;
+  margin-bottom: 0.2rem;
 }
